--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "its-compiler",
-    "version": "1.0.0",
+    "name": "its-compiler-js",
+    "version": "0.1.0",
     "type": "module",
     "description": "JavaScript/TypeScript implementation of the Instruction Template Specification (ITS) compiler",
     "main": "dist/index.js",
@@ -32,12 +32,12 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/your-username/its-compiler-js.git"
+        "url": "https://github.com/AlexanderParker/its-compiler-js.git"
     },
     "bugs": {
-        "url": "https://github.com/your-username/its-compiler-js/issues"
+        "url": "https://github.com/AlexanderParker/its-compiler-js/issues"
     },
-    "homepage": "https://github.com/your-username/its-compiler-js#readme",
+    "homepage": "https://github.com/AlexanderParker/its-compiler-js#readme",
     "dependencies": {
         "commander": "^11.0.0",
         "chalk": "^5.3.0",
