Enhance package keywords for improved project discoverability
Expand project keywords to provide more precise technological context and searchability, supporting the ongoing preparation for public release.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
         "ai",
         "prompt",
         "its",
-        "instruction-template-specification"
+        "instruction-template-specification",
+        "typescript",
+        "javascript",
+        "prompt-engineering",
+        "ai-templates",
+        "template-engine",
+        "prompt-templates"
     ],
     "author": "Your Name",
     "license": "MIT",
