Add GitHub Actions workflow for automated testing
Set up continuous integration to run tests on push and pull requests
- Configures workflow for Node.js 20
- Adds npm test and dependency installation steps
- Enhances package.json with ES module exports and keywords

--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
     "description": "JavaScript/TypeScript implementation of the Instruction Template Specification (ITS) compiler",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "bin": {
         "its-compile": "dist/cli.js"
     },
@@ -32,7 +38,8 @@
         "prompt-engineering",
         "ai-templates",
         "template-engine",
-        "prompt-templates"
+        "prompt-templates",
+        "npm-package"
     ],
     "author": "Your Name",
     "license": "MIT",
