--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     },
     "homepage": "https://github.com/AlexanderParker/its-compiler-js#readme",
     "dependencies": {
-        "commander": "^11.0.0",
         "chalk": "^5.3.0",
         "chokidar": "^3.5.3",
+        "commander": "^11.0.0",
         "node-fetch": "^3.3.2"
     },
     "devDependencies": {
+        "@types/jest": "^29.0.0",
         "@types/node": "^20.0.0",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
@@ -65,11 +66,10 @@
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
         "jest": "^29.0.0",
-        "@types/jest": "^29.0.0",
-        "ts-jest": "^29.0.0",
-        "typescript": "^5.0.0",
         "prettier": "^3.0.0",
-        "rimraf": "^5.0.0"
+        "rimraf": "^5.0.0",
+        "ts-jest": "^29.0.0",
+        "typescript": "^5.0.0"
     },
     "files": [
         "dist/**/*",
