--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "lint:fix": "eslint src/**/*.ts --fix",
         "format": "prettier --write src/**/*.ts",
         "prepublishOnly": "npm run build",
-        "clean": "rimraf dist"
+        "clean": "rimraf dist",
+        "release:patch": "npm test && npm run lint && npm version patch && git push --follow-tags",
+        "release:minor": "npm test && npm run lint && npm version minor && git push --follow-tags",
+        "release:major": "npm test && npm run lint && npm version major && git push --follow-tags"
     },
     "keywords": [
         "template",
@@ -60,11 +63,13 @@
     "devDependencies": {
         "@types/jest": "^29.0.0",
         "@types/node": "^20.0.0",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
-        "eslint": "^8.0.0",
+        "@eslint/js": "^9.0.0",
+        "@typescript-eslint/eslint-plugin": "^8.0.0",
+        "@typescript-eslint/parser": "^8.0.0",
+        "eslint": "^9.0.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
+        "globals": "^16.3.0",
         "jest": "^29.0.0",
         "prettier": "^3.0.0",
         "rimraf": "^5.0.0",
