--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,9 @@ jobs:
 
       - name: Run tests
         run: npm test
+
+      - name: Run linting
+        run: npm run lint
+
+      - name: Build package
+        run: npm run build
